option java_outer_classname = "LCConnectServerConfig";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.setting.parameter";


message ConnectServerConfig{
	optional	string	masterApn	=1;
	optional	string	masterName	=2;
	optional	string	masterPassword	=3;
	required	string	masterIP	=4;
	optional	string	backupApn	=5;
	optional	string	backupName	=6;
	optional	string	backupPasswd	=7;
	optional	string	backupIP		=8;
	optional	int32	tcpPort			=9;
	optional	int32	udpPort			=10;
}
